--- a/_config.yml
+++ b/_config.yml
@@ -105,9 +105,9 @@ analytics:
 
 # Site Author
 author:
-  name: "Nick Hand"
+  name: "Zirui Chen, Tingting Huang, Han Qiao"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "Director of Finance, Data, and Policy, Philadelphia Controller"
+  bio: "Master of City Planning Students"
   location: "Philadelphia"
   email:
   links:
